# aistriu

./: .env.example  .gitignore  README.md  compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/aistriu_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/core/: config.py
backend/tests/: test_health.py
docs/deployment/: render.md
frontend/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json
frontend/src/lib/styles/: tokens.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
